--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/pwa": "^3.3.5",
+    "chart.js": "^3.4.1",
     "core-js": "^3.15.2",
+    "d3": "^7.0.0",
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
