--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "chart.js": "^3.4.1",
     "core-js": "^3.15.2",
     "d3": "^7.0.0",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "vue-gtag": "^1.16.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
-    "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/tailwindcss": "^4.0.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.22.0",
