--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@nuxtjs/sitemap": "^2.4.0",
     "chart.js": "^3.4.1",
     "core-js": "^3.15.2",
-    "d3": "^7.0.0",
     "nuxt": "^2.15.3",
     "vue-gtag": "^1.16.1"
   },
@@ -31,6 +30,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.14.0",
     "fibers": "^5.0.0",
+    "moment": "^2.29.1",
     "postcss": "^8.2.8",
     "prettier": "^2.3.2",
     "pug": "^3.0.2",
