--- a/.github/workflows/netlify-deploy.yml
+++ b/.github/workflows/netlify-deploy.yml
@@ -36,6 +36,7 @@ jobs:
           production-branch: main
           github-token: ${{ secrets.GITHUB_TOKEN }}
           deploy-message: "Deploy from GitHub Actions"
+          production-deploy: true
           enable-pull-request-comment: false
           enable-commit-comment: true
           overwrites-pull-request-comment: true
