--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/sitemap": "^2.4.0",
     "chart.js": "^3.5.1",
     "core-js": "^3.18.1",
+    "moving-averages": "^4.0.6",
     "nuxt": "^2.15.8",
     "vue-gtag": "^1.16.1"
   },
